--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +11,7 @@
         rel="stylesheet">
 </head>
 
-<body>
+<body id="home">
     <div class="container">
         <header>
             <div class="logo">
@@ -20,7 +19,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="#home">HOME</a></li>
                     <li><a href="#about">ABOUT</a></li>
                     <li><a href="#skills">SKILLS</a></li>
                     <li><a href="#portfolio">PORTFOLIO</a></li>
@@ -312,14 +311,6 @@
         <footer>
             <p>© Copyright 2025 | Design and Developed by <i><a href="index.html">Shayan Malik</a></i></p>
         </footer>
-
-
-
-
-
-
-
-
 
     </div>
 </body>
