--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="left">
                 <p>I am a passionate web developer with a solid understanding of HTML, CSS, and basic JavaScript. I have a keen interest in building clean, responsive, and user-friendly websites that provide a smooth experience across all devices. With every project I work on, I focus on writing neat code and improving both my technical and creative skills.</p>
                 <span>I am eager to expand my knowledge of modern web technologies, frameworks, and best practices to become a skilled front-end developer. My ultimate goal is to grow continuously, take on new challenges, and contribute to innovative digital solutions.</span>
-                <a href="./shayan-cv.pdf.pdf" download="Shayan-Malik-CV.pdf"><button class="cv">Download CV</button></a>
+                <a href="./shayan-cv.pdf" download="Shayan-Malik-CV.pdf"><button class="cv">Download CV</button></a>
             </div>
 
             <div class="right">
@@ -387,3 +387,4 @@
 </body>
 
 </html>
+
